styles/stylesheet.css
/*   BEGIN 4 GRID  */
/*  SECTIONS  */
.section {
	clear: both;
	padding: 0px;
	margin: 0px;
}

/*  COLUMN SETUP  */
.col {
	display: block;
	float:left;
	margin: 1% 0 1% 1.6%;
}

.col:first-child { margin-left: 0; }

/*  GROUPING  */
.group:before,
.group:after { content:""; display:table; }
.group:after { clear:both;}

/*  GRID OF FOUR  */
.span_4_of_4 {
	width: 100%;
}

.span_3_of_4 {
	width: 74.6%;
}
.span_2_of_4 {
	width: 49.2%;
  
}
.span_1_of_4 {
	width: 21.8%;
}
/* 3 Grid system */
.span_1_of_3 {
    width: 32.2%;
}
.span_2_of_3 {
    width: 62.4%;
}

/*  GO FULL WIDTH BELOW 480 PIXELS */
@media only screen and (max-width: 480px) {
  .col {  margin: 1% 0 1% 0%; }
  .span_1_of_4, .span_2_of_4, .span_3_of_4, .span_4_of_4, .span_1_of_3, .span_2_of_3 { width: 100%; }
}
/*   END 4 GRID   */

img { clear:both;
    width: 15rem;
}

.hide {
  display: none;
}
body {
  font-family: 'Cutive', serif;
  margin: 0;
}

p {
  font-family: 'Open Sans', sans-serif;

}
/* Logo Header Styles */

 header img {
    width: 6rem;
    height: auto;
    float: left;
}

header h1 {
    float: right;
    color: #523e33;
    float: right;
    margin-top: 1.8rem;
 }

/* Navigation Styles */

nav {
    background-color: #94c840;
    box-shadow: 0.9px 1px 5px;
 }

nav ul {
    margin: 0 13%;
}

nav li {
    text-decoration: none;
    display: inline-block;
    padding: 10px 5px 10px 5px;
    font-size: 17px;
}

nav li a {
    text-decoration: none;
    padding: 20px;
    color: white;
}

nav li:hover {
    text-decoration: none;
    display: inline-block;
    padding: 10px 5px 10px 5px;
    transition: background-color 0.5s ease;
    background-color: #d6e8b8;
}

nav li a:hover {
    text-decoration: none;
    padding: 20px;
    transition: color 0.5s ease;
    color: #523e33;
}

/*  Section Aside styles */

.intro {
    margin: 20px;
    color: ghostwhite;
    background-color: rgba(13, 13, 13, .65);    
    padding: 10px;
}

.section {
    margin: 0 5%;
}

.section a {
    text-decoration: none;
    color: white;
}
.section a:hover {
    text-decoration: none;
    transition: color 0.5s ease;
    color: #94c840;
}

aside {
    padding: 6px;
    border: 0.5px solid #94c840;
    color: white;
    text-align: center;
}

aside h4 {
    color: #94c840;
 }

aside p {
    color: grey;
    font-size: 14px
 }
/*Banner/Intro Section page only*/
.img-container {
    background-image: url("../images/class1.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center; 
}

/*Banner/About Section  page only*/
.img-about {
    background-image: url("../images/students-competing2.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center; 
}

/*Banner/Services Section  page only*/
.img-services {
    background-image: url("../images/archery.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center; 
}

/*Banner/Instructors Section  page only*/
.img-instructors {
    background-image: url("../images/archery-targets.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center; 
}
.lessons section:nth-child(1) {
    background-color: #94c840;
    font-size: 0.9rem;
    padding: 10px;
    color: white;
    height: auto;
}

.lessons section:nth-child(1) li {
    list-style: none;
    display: inline-block;
    padding: 10px;
    border: 1px solid white;
    border-radius: 5px;    
}

.lessons section:nth-child(1) li:nth-child(2n) {
    list-style: none;
    display: inline-block;
    padding: 10px;
    border: none;
}

.lessons section:nth-child(2) {
    background-color: #94c840;
    font-size: 0.9rem;
    padding: 10px;
    color: white;
    height: auto;
}

.lessons section:nth-child(1n) a {
    background: linear-gradient(#82b332, #658b27); 
    font-family: 'Cutive', serif;
    color: white;
    border: none;
    padding: 10px 15px 10px 15px;
    border-radius: 5px;
    cursor: pointer;
    float: right;
    text-align: center;
}

.lessons section:nth-child(1n) a:hover {
    background: linear-gradient( #82b332, #658b27); 
    color: #523e33;
    border: none;
    padding: 10px 15px 10px 15px;
    border-radius: 5px;
    cursor: pointer;
    transition: color 0.5s ease;
}

.policy {
    border: 1px solid grey;
    text-align: center;
    font-size: 1rem;
    color: slategray;
}

.footer-nav {
    text-align: center;
    background-color: #94877e;
}

